tests/rosetta/out/Java/chinese-remainder-theorem.error
javac error: exit status 1
/tmp/TestMochiToJavachinese-remainder-theorem3772263613/001/ChineseRemainderTheorem.java:14: error: incompatible types: Integer cannot be converted to List<Integer>
        List<Integer> g = res.get(0);
                                 ^
/tmp/TestMochiToJavachinese-remainder-theorem3772263613/001/ChineseRemainderTheorem.java:15: error: incompatible types: Integer cannot be converted to List<Integer>
        List<Integer> x1 = res.get(1);
                                  ^
/tmp/TestMochiToJavachinese-remainder-theorem3772263613/001/ChineseRemainderTheorem.java:16: error: incompatible types: Integer cannot be converted to List<Integer>
        List<Integer> y1 = res.get(2);
                                  ^
/tmp/TestMochiToJavachinese-remainder-theorem3772263613/001/ChineseRemainderTheorem.java:17: error: bad operand types for binary operator '*'
        return Arrays.asList(g, y1 - (b / a) * x1, x1);
                                             ^
  first type:  int
  second type: List<Integer>
/tmp/TestMochiToJavachinese-remainder-theorem3772263613/001/ChineseRemainderTheorem.java:24: error: incompatible types: Integer cannot be converted to List<Integer>
        List<Integer> x = r.get(1);
                               ^
/tmp/TestMochiToJavachinese-remainder-theorem3772263613/001/ChineseRemainderTheorem.java:25: error: bad operand types for binary operator '<'
        if (x < 0) {
              ^
  first type:  List<Integer>
  second type: int
/tmp/TestMochiToJavachinese-remainder-theorem3772263613/001/ChineseRemainderTheorem.java:26: error: bad operand types for binary operator '+'
            return x + m;
                     ^
  first type:  List<Integer>
  second type: int
/tmp/TestMochiToJavachinese-remainder-theorem3772263613/001/ChineseRemainderTheorem.java:28: error: incompatible types: List<Integer> cannot be converted to int
        return x;
               ^
/tmp/TestMochiToJavachinese-remainder-theorem3772263613/001/ChineseRemainderTheorem.java:40: error: incompatible types: Integer cannot be converted to List<Integer>
            List<Integer> ni = n.get(i);
                                    ^
/tmp/TestMochiToJavachinese-remainder-theorem3772263613/001/ChineseRemainderTheorem.java:41: error: incompatible types: Integer cannot be converted to List<Integer>
            List<Integer> ai = a.get(i);
                                    ^
/tmp/TestMochiToJavachinese-remainder-theorem3772263613/001/ChineseRemainderTheorem.java:42: error: bad operand types for binary operator '/'
            double p = prod / ni;
                            ^
  first type:  int
  second type: List<Integer>
/tmp/TestMochiToJavachinese-remainder-theorem3772263613/001/ChineseRemainderTheorem.java:43: error: bad operand types for binary operator '%'
            int inv = modInv(p % ni, ni);
                               ^
  first type:  double
  second type: List<Integer>
/tmp/TestMochiToJavachinese-remainder-theorem3772263613/001/ChineseRemainderTheorem.java:44: error: bad operand types for binary operator '*'
            x = (int)(x + ai * inv * p);
                             ^
  first type:  List<Integer>
  second type: int
13 errors
